# http-server

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  styles.css
config/: server.conf
include/: Config.hpp  Connection.hpp  EventLoop.hpp  HttpParser.hpp  LoadBalancer.hpp  RateLimiter.hpp  UpstreamPool.hpp
src/: Connection.cpp  EventLoop.cpp  HttpParser.cpp  LoadBalancer.cpp  RateLimiter.cpp  UpstreamPool.cpp  connection.cpp  connection.hpp  epoll_manager.cpp  epoll_manager.hpp  health_checker.cpp  health_checker.hpp  http_parser.cpp  http_parser.hpp  load_balancer.cpp  load_balancer.hpp  main.cpp  proxy_server.cpp  proxy_server.hpp  rate_limiter.cpp  rate_limiter.hpp  socket_utils.cpp  socket_utils.hpp
src/server/: file_handler.cpp  file_handler.hpp  http_server.cpp  http_server.hpp  request_parser.cpp  request_parser.hpp  response_builder.cpp  response_builder.hpp  thread_pool.cpp  thread_pool.hpp
src/utils/: socket_utils.cpp  socket_utils.hpp
test_backends/backend8001/: index.html
test_backends/backend8002/: index.html
tests/: test_parser.cpp  test_server.cpp
www/: index.html  mypage.html  styles.css
